--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "sequelize": "^6.20.1",
     "sequelize-typescript": "^2.1.3",
     "swagger-ui-express": "^4.4.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "webpack": "^5.73.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
